style.css
html, body {
	height: 100%;
	width: 100%
}

* {
	box-sizing: border-box;
}

/*navigation-----------------*/

.navbar {
	background-color: transparent;
	padding: 5px 25px 5px 10px;
	font-size: 1.2em;
	transition: background-color 1s ease 0s;
}
.navbar-default {
	border-color: transparent;
}

.navbar-brand {
	min-height: 55px;
	padding: 0 15px 5px;	
}
/* Solid class attached on scroll past first section */

.navbar.solid {
  background-color: #2d5986;
  transition: background-color 1s ease 0s;
  box-shadow: 0 0 4px grey;

    /*.navbar-nav {

       > li {

          > a {
            color: #C57ED3;
            transition: color 1s ease 0s;
          }

       } //end li

    } //end .navbar-nav*/

}

.navbar-brand img {
	height: 55px;
	width: 55px;
	border-radius: 5px;
}
.navbar-default .navbar-nav li a {
	color:  #d9d9d9;
	font-family: Poppins;
	font-weight: 300;
}
.navbar-default .navbar-nav li a:hover {
	color: #fff;
}

.resume {
	margin: 10px 5px 0;
	border: 1px solid #FFF;
	border-radius: 5px;
	background-color: transparent;
	color: #D5D5D5;
}
.resume:hover {
	color: #FFF;
}
.t-border {
  border-top: 2px solid #dfe2e6;
  width: 50%;
  margin: auto;
}
a:hover {
	color: #ff3333;
	text-decoration: none;
}
a:visited {
	color: #cc2900;
	text-decoration: none;
}

/*header-----------------*/

#home {
	background: linear-gradient(rgba(0,0,0,0.5), rgba(0,0,0,0.5)), url(img/nyskyline3.jpg) no-repeat center center fixed;
	display: table;
	height: 600px;
	position: relative;
	width: 100%;
	background-size: cover;
}

/*main page-----------------*/
.landing-text {
	display: table-cell;
	text-align: center;
	vertical-align: bottom;
	font-family: 'Quicksand', sans-serif;
	color:  #d9d9d9;
	padding-bottom: 80px;
}
.landing-text h1 {
	font-size: 650%;
	font-weight: normal;
	margin-bottom: 0;
}
.landing-text h3 {
	font-weight: normal;
	font-size: 250%;
	margin-top: 0;
}

.padding {
	padding: 70px 0;
}
.padding img {
	width: 100%;
}
.padding-footer {
	padding: 50px 0 0;
}
.header-padding {
	padding: 0 0 30px;
}
.about, .projects, .skills{
	font-family: 'Poppins', sans-serif;
	padding-bottom: 50px;
}

.padding-proj h3, h4 {
	font-family: 'Merriweather', sans-serif;
	font-weight: bold;
}

.padding-proj {
	padding-bottom: 20px;
}
.padding-proj1 {
	padding: 30px;
}
p{
	font-size: 1.2em;
}
.img-shadow {
	box-shadow: 5px 7px 10px -6px rgba(0,0,0,0.31);
}

.devicon img {
	width: 	25%;
}
.devicon {
		padding-bottom: 30px;
		font-size: 90px;
	}

/*footer----------------*/

footer {
	width: 100%;
	background-color: #2d5986;
	padding: 2% 2% 2% 2%;
	color: #FFF;
}

.footer-logo img{
		border-radius: 5px;
}
.fa {
	padding: 15px;
	font-size: 35px;
	color: #FFF;
}
.fa:hover {
	color: 	#ff3333;
	text-decoration: none;
    transform: scale(1.2) rotate(0deg);
}
.icon {
	max-width: 200px;
}
.footer-text h4 {
		font-weight: normal;
}

/*media queries-----------------*/

@media (max-width: 768px) {
	.landing-text h1 {
		font-size: 450%;
	}
	.landing-text h3 {
		font-size: 170%;
	}
	.fa {
		font-size: 30px;
		padding: 10px;
	}
	.icon {
		padding-top: 5%;
		max-width: 100px;
	}
	.navbar-brand img {
	height: 50px;
	width: 50px;
	border-radius: 5px;
	}
	.navbar {
	padding: 5px 25px 5px 10px;
	font-size: 1.2em;
	}

	.resume {
		margin-left: 12px;
	}
	.devicon {
		font-size: 65px;
		padding-bottom: 20px;
	}
	.devicon img {
	width: 	15%;
	}
	.about-pic {
		padding-bottom: 20px;
	}

}

@media (min-width: 769px) and (max-width: 1024px){
	.navbar-brand img {
	height: 55px;
	width: 55px;
	border-radius: 5px;
	}
	.navbar {
	padding: 5px 25px 5px 10px;
	font-size: 1.2em;
	}
	.devicon img {
	width: 	40%;
	}
	.devicon {
		padding-bottom: 20px;
		font-size: 85px;
	}
	.fa {
		font-size: 30px;
		padding: 10px;
	}
	.padding {
	padding: 40px 0;
}

}

@media (max-width: 460px) {
	.fa {
		font-size: 20px;
		padding: 0 5px;
	}
	.devicon img {
	width: 	20%;
	}
	.landing-text h1 {
		font-size: 300%;
	}
	.landing-text h3 {
		font-size: 155%;
	}
	.footer-text h4 {
		font-size: 14px;
		font-weight: normal;
	}
	.footer-text h3 {
		font-size: 18px;
	}
	.footer-logo img {
		height: 40px;
		width: 	40px;
	}


}		

